more navigation and packager